classDiagram
  class Ability {
    abilityID : int
    get : dict
    nextID : int
    affectedUnits(map, sourceUnit, posn)
    aoe(map, sourceUnit, posn)
    correctWeapon(weapon)
    cost()
    description()
    effects()
    hasEffect(map, sourceUnit, posn)
    name()
    range(map, sourceUnit)
    rangeObject()
    requiredWeapons()
    setCopyableState(state)
    sound(weaponAbility)
    targetType()
  }
  class Armor {
  }
  class Battle {
    activeUnit : NoneType
    endingConditions
    unitQueue : list
    map()
    pickNextUnit()
    status()
    unitActed(action, x, y)
    unitCanceled()
    unitDone()
    unitMoved(x, y)
    unitSetFacing(facing)
    units()
  }
  class Class {
    abilities
    jump
    matkBase
    matkGrowth
    matkMult
    mdefBase
    mdefGrowth
    mdefMult
    mhpBase
    mhpGrowth
    mhpMult
    move
    mspBase
    mspGrowth
    mspMult
    name
    speedBase
    speedGrowth
    speedMult
    watkBase
    watkGrowth
    watkMult
    wdefBase
    wdefGrowth
    wdefMult
    addAbilities(u)
    createUnit(gender)
    equip(u)
    levelUp(u)
    spriteRoot()
  }
  class Cross {
    affectedSquares(map, unit, pos)
  }
  class Damage {
    affect(source, target)
  }
  class DamageResult {
    damage
  }
  class DamageSP {
    affect(source, target)
  }
  class DamageSPResult {
    damage
  }
  class DefeatAllEnemies {
    description()
  }
  class Defend {
    affect(source, target)
  }
  class Diamond {
    affectedSquares(map, unit, pos)
  }
  class DiamondExtend {
    affectedSquares(map, unit, pos)
  }
  class DrainLife {
    affect(source, target)
  }
  class Effect {
    affect(source, target)*
    attackIsFromFront(source, target)
    attackIsFromRear(source, target)
    attackIsFromSide(source, target)
    calcAttackAndDefense(source, target)
    calcDamage(attack, defense, maxDamage)
    estimateDamage(attack, defense)
    getDefenders(target)
  }
  class EffectResult {
    hit
    target
  }
  class EndingCondition {
    description()
  }
  class Environment {
    addLight(light)
    ambientLight()
    fogColor()
    fogDensity()
    fogEnabled()
    fogEnd()
    fogStart()
    lights()
    setAmbientLight(color)
    setFog(color, density, start, end)
    setSkyColor(color)
    skyColor()
  }
  class Equipment {
    getSprites(spriteName)
    jump()
    matk()
    mdef()
    mhp()
    move()
    msp()
    name()
    setSprites(sprites)
    speed()
    watk()
    wdef()
  }
  class Faction {
    faction()
    units()
  }
  class Foo {
    x
  }
  class HealFriendlyDamageHostile {
    affect(source, target)
  }
  class HealResult {
    damage
  }
  class Healing {
    affect(source, target)
  }
  class LastTeamStanding {
  }
  class Light {
    ambient()
    constantAttenuation()
    diffuse()
    linearAttenuation()
    position()
    quadraticAttenuation()
    specular()
  }
  class Line {
    affectedSquares(map, unit, pos)
  }
  class Map {
    height
    squares : list
    tags
    waterColor
    waterHeight
    width
    bfs(start, expand, visitPredicate, resultPredicate)
    changeCorner(x, y, corner, change)
    closestUnits(unit, faction)
    fillDistances(unit, posn)
    getPotentialConnections(square)
    getStateToCopy()
    index(x, y)
    loadString()
    reachable(unit)
    resetSearchCosts()
    save(filename)
    setCopyableState(state)
    setLoadString(text)
    shortestPath(targetX, targetY)
    smoothColors()
    squareExists(x, y)
  }
  class MapIO {
    load(mapname)
    loadString(mapname, text)
  }
  class MapSquare {
    color : list
    cornerColors : list
    cornerHeights
    guiData : dict
    search : NoneType
    smooth
    smoothed : list
    tag
    unit : NoneType
    waterColor
    waterHeight
    x
    y
    z
    height()
    maxHeight()
    minHeight()
    minusHeight(height)
    plusHeight(height)
    posn()
    posn2d()
    setColor(color)
    setTag(tag)
    setTexture(texture)
    setUnit(u)
    tagName()
    texture()
  }
  class MissResult {
  }
  class PlayerDefeated {
  }
  class Point {
  }
  class Range {
    affectedSquares(map, unit, pos)
  }
  class Scenario {
    ai()
    battle()
    lightEnvironment()
    map()
    music()
    unitFromID(unitID)
    units()
  }
  class ScenarioIO {
    load(scenarioFilename)
  }
  class Single {
    affectedSquares(map, unit, pos)
  }
  class Status {
    FREEZE : int
    HASTE : int
    INVULNERABLE : int
    MINUS_MATK : int
    MINUS_MDEF : int
    MINUS_MOVE : int
    MINUS_WATK : int
    MINUS_WDEF : int
    NUM_TYPES : int
    PARALYZE : int
    PARALYZE_ARMS : int
    PARALYZE_LEGS : int
    PLUS_MATK : int
    PLUS_MDEF : int
    PLUS_MOVE : int
    PLUS_WATK : int
    PLUS_WDEF : int
    POISON : int
    REGEN : int
    SLEEP : int
    SLOW : int
    TRIPPED : int
    effectNames : list
    effectTextures : list[tuple[float, float, float, float] | None]
    affect(source, target)
    beneficial(effectType)
    isColor(effectType)
  }
  class StatusEffects {
    add(effectType, duration, power)
    clear()
    color()
    duration(effectType)
    has(effectType)
    power(effectType)
    texture()
    update()
  }
  class StatusResult {
    duration
    power
    type
  }
  class Unit {
    nextID : int
    unitID : int
    abilities()
    active()
    addAbility(abilityName)
    addDefender(unit)
    addStatusEffect(effectType, duration, power)
    alive()
    allAbilities()
    armor()
    attack()
    battleInit()
    canAct()
    canMove()
    canceled()
    classLevel(className)
    className()
    ct()
    damageHP(amount, damageType)
    damageSP(amount)
    defenders()
    defending(unit)
    equipArmor(armor)
    equipWeapon(weapon)
    equipment()
    evade()
    facing()
    faction()
    getAI()
    getOverSprites(spriteName)
    getSprites(spriteName)
    hasAct()
    hasCancel()
    hasMove()
    hp()
    incrementClassLevel(className)
    jump()
    level()
    matk()
    mdef()
    mhp()
    move()
    msp()
    name()
    posn()
    posn3d()
    readyTurn()
    removeDefender(unit)
    setCT(ct)
    setFacing(facing)
    setFaction(faction)
    setMoveActCancel(move, act, cancel)
    setOverSprites(sprites)
    setPosn(x, y, z)
    setSP(sp)
    setSprites(sprites)
    slow(modifier, duration)
    sp()
    speed()
    statusEffectMult(increase, decrease)
    statusEffects()
    update(newUnit)
    watk()
    wdef()
    weapon()
    x()
    y()
    z()
  }
  class UnitTurn {
    ACT_FIRST : int
    MOVE_FIRST : int
    action()
    actionTarget()
    facing()
    moveTarget()
    setMoveTarget(moveTarget)
    turnOrder()
  }
  class Weapon {
    BOW : int
    DAGGER : int
    HAND : int
    MACE : int
    STAFF : int
    SWORD : int
    attack()
    weaponType()
  }
  class White {
  }
  DefeatAllEnemies --|> EndingCondition
  LastTeamStanding --|> EndingCondition
  PlayerDefeated --|> EndingCondition
  Damage --|> Effect
  DamageResult --|> EffectResult
  DamageSP --|> Effect
  DamageSPResult --|> EffectResult
  Defend --|> Effect
  DrainLife --|> Effect
  HealFriendlyDamageHostile --|> Effect
  HealResult --|> EffectResult
  Healing --|> Effect
  MissResult --|> EffectResult
  Status --|> Effect
  StatusResult --|> EffectResult
  Armor --|> Equipment
  Weapon --|> Equipment
  Point --|> Light
  White --|> Light
  Cross --|> Range
  Diamond --|> Range
  DiamondExtend --|> Diamond
  Line --|> Range
  Single --|> Range
